[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.15", optional = true }
tokio-stream = "0.1.1"
warp = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"

[features]
default = ["websocket"]
websocket = ["tokio-tungstenite"]